Fixed Upper bound of Integral valign
Set to 1.7em for vertical-align for upper bound of integral functions.

--- a/src/css/mathx.css
+++ b/src/css/mathx.css
@@ -763,7 +763,7 @@
   font-size: .9em;
 }
 .func-sup {
-  vertical-align: 2.2em;
+  vertical-align: 1.7em; /* 2.2em; */
   margin-right: 0.1em;
 }
 .func-sub {
